--- a/AngularBase/appsettings.json
+++ b/AngularBase/appsettings.json
@@ -3,7 +3,7 @@
     "ApplicationName": "AngularBase",
     "ConnectionString": "Data Source=localhost;Initial Catalog=AngularAppDbBase;Integrated Security=True;",
     "ClientId": "AngularBase",
-    "ClientSecret": "d@C'~C&1:/]MZGAE$|1k1$w^'.4XGQ/;[%g{x1!3Mx`qf=!+Y'!DPwh6?'f0a17+",
+    /*"ClientSecret": "d@C'~C&1:/]MZGAE$|1k1$w^'.4XGQ/;[%g{x1!3Mx`qf=!+Y'!DPwh6?'f0a17+",*/
     "Domain": "https://localhost:44348"
   },
   "MailSettings": {
